<resources>
    <string name="app_name">Assignment4&amp;5</string>
    <string name="select_meal">Select Meal:</string>
    <string name="price">Price:</string>
    <string name="meal_price">Meal Price</string>
    <string name="choose_quantity">Choose Quantity:</string>
    <string name="_1">1</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="total_price">Total Price:</string>
    <string name="total_price1">Total Price</string>
    <string name="confirm_order_by_checking_box">Confirm order by cheking box</string>
    <string name="confirm">Confirm</string>
    <string name="button">Button</string>
    <string name="tip">Tip:</string>
    <string name="order">Order</string>
    <string name="_11">1</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="place_order">Place Order</string>
    <string name="display_order_details">Display Order Details</string>
    <string name="chicken_curry">Chicken Curry</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="price_cad">Price: CAD</string>
    <string name="textview">TextView</string>
    <string name="quantity">Quantity</string>
    <string name="_100">100</string>
    <string name="total_price_cad">Total Price: CAD</string>
    <string name="_111">1</string>
    <string name="_1000">10%</string>
    <string name="_102">10</string>
    <string name="quantity7">Quantity :</string>
    <string name="tips">Tips :</string>
    <string name="delete_btn">DELETE</string>
    <string name="todo1">TODO</string>
    <string-array name="meal">
        <item>--select meals--</item>
        <item>Burger</item>
        <item>Fried Calamaries</item>
        <item>Paneer Tikka</item>
        <item>Pasta</item>
        <item>Pizza</item>
        <item>Poutine</item>
        <item>Sandwitch</item>
        <item>Chicken Curry</item>
        <item>Chicken Wings</item>
        <item>Chicken Biryani</item>
    </string-array>
</resources>